<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--  for application -->
    <string name="app_name">Bezel Launcher</string>
    
    <!--  for launch service -->
    <string name="ready_service">The Bezel Launcher is ready.</string>
    <string name="terminate_service">The Bezel Launcher has been terminated.</string>
    <string name="launch_message">%1$s will be launched.</string>
    <string name="launch_error_message">Failed to launch.</string>
    
    <!--  for settings activity -->
    <string name="launch_options">LAUNCH OPTIONS</string>
    <string name="left_swipe">Left swipe</string>
    <string name="right_swipe">Right swipe</string>
    <string name="bottom_swipe">Bottom swipe</string>
    <string name="register_applicaion">Register application</string>

</resources>