<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fin10.bezellauncher.SettingsActivity"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/launch_options"
            android:layout_centerVertical="true"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ToggleButton
            android:id="@+id/toggle_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/left_option_container"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:drawable/list_selector_background"
        android:clickable="true"
        android:padding="5dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/left_to_right_arrow" />

        <TextView
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/left_swipe" />

        <ImageView
            android:id="@+id/left_app_icon"
            android:layout_width="50dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/left_app_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/register_applicaion" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/right_option_container"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:drawable/list_selector_background"
        android:clickable="true"
        android:padding="5dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/right_to_left_arrow" />

        <TextView
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/right_swipe" />

        <ImageView
            android:id="@+id/right_app_icon"
            android:layout_width="50dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/right_app_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/register_applicaion" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/bottom_option_container"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:drawable/list_selector_background"
        android:clickable="true"
        android:padding="5dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/bottom_top_arrow" />

        <TextView
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/bottom_swipe" />

        <ImageView
            android:id="@+id/bottom_app_icon"
            android:layout_width="50dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/bottom_app_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/register_applicaion" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@android:color/darker_gray" />

</LinearLayout>